<resources>
    <string name="app_name">Ingenieria</string>
    <string name="hola_yago_mai_y_flor">Hola Yago, Mai y Flor</string>
    <string name="on_off">On/off</string>
    <string name="visibilidad">Visibilidad</string>
    <string name="descubrir">Descubrir</string>
    <string name="iniciar_conexion">Iniciar Conexion</string>
    <string name="ingrese_el_texto">Ingrese el texto</string>
    <string name="enviar">Enviar</string>
    <string name="mensaje_entrante">Mensaje Entrante</string>
</resources>
